docs: fix sidebar link cropping

--- a/src/_sass/docs.scss
+++ b/src/_sass/docs.scss
@@ -222,7 +222,7 @@ $sidebar-maximum-width: 400px;
 }
 
 .Docs-subnav-accordion__panel {
-  max-height: 1000px; // Arbitrary height that hopefully won't clip any content
+  max-height: 1500px; // Arbitrary height that hopefully won't clip any content
   transition: max-height $anim-duration ease;
   overflow: hidden;
 }
